# gittergraph

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: test-gittergraph.yml
src/gittergraph/: __init__.py  __main__.py
src/gittergraph/access/: __init__.py  branch_access.py  commit_access.py  head_access.py  repository.py  tag_access.py
src/gittergraph/core/: __init__.py  graph.py  graph_data.py  history_walker.py  ref_index.py  ref_resolver.py
src/gittergraph/data/: base_access.py  commit_access.py  model.py
src/gittergraph/models/: __init__.py  branch.py  commit.py  head.py  signature.py  tag.py
src/gittergraph/tui/: __init__.py  app.py
src/gittergraph/utils/: __init__.py  time.py
tests/: __init__.py  conftest.py  make_models_helper.py
tests/access/: test_base_access.py  test_branch_access.py  test_commit_access.py  test_git_repository.py  test_tag_access.py
tests/core/: core_helper.py  test_graph.py  test_graph_data.py  test_history_walker.py  test_ref_index.py  test_ref_resolver.py
tests/data/: test_base_access.py  test_commit_access.py  test_model.py
tests/models/: models_helper.py  test_branch.py  test_commit.py  test_head.py  test_signature.py  test_tag.py
tests/tui/: test_app.py
tests/tui/screens/: test_repository_screen.py
tests/tui/widgets/: test_branch_list.py  test_commit_detail.py  test_commit_history.py  test_commit_list.py  test_head_detail.py  test_tag_list.py
tests/unit/: test__main__.py
tests/unit/access/: test_branch_access.py  test_head_access.py  (+1 more)
tests/utils/: test_time.py
(+35 files in other folders)
