[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gittergraph"
version = "0.1.0"
description = "Modern git graph in your terminal"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "textual",
    "pygit2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "black",
    "mypy",
    "isort",
]

[project.scripts]
gittergraph = "gittergraph.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint.messages_control]
disable = ["C0301", "C0103"]

[tool.isort]
profile = "black"